# Homogeneous

./: CMakeLists.txt  README.md
assets/shaders/: raymarching.frag  raymarching.vert  triangle.vert  voxel.frag  voxel.vert
assets/voxes/: aiz.vox  aiz2.vox
src/: block.h  camera.h  constants.h  hello_triangle.cpp  main.cpp  scene.cpp  scene.h  shader.cpp  shader.h  texture.cpp  texture.h  vox_reader.cpp  vox_reader.h  voxel.cpp  voxel.h  voxel_renderer.cpp  voxel_renderer.h
tests/: CMakeLists.txt  test_cuda.cu  test_main.cpp  test_utils.hpp
